--- a/client/index.html
+++ b/client/index.html
@@ -1,29 +1,32 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>SentimentaList</title>
+<html ng-app="sL">
 
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>SentimentaList</title>
 
-  <body ng-app="sL">
-    <div class="container">
-      <div ui-view></div>
-      </div>
-  </body>
+</head>
 
-  <footer>
-    <script src="./lib/angular/angular.js"></script>
-    <script src="./lib/angular-animate/angular-animate.js"></script>
-    <script src="./lib/angular-cookies/angular-cookies.js"></script>
-    <script src="./lib/angular-resource/angular-resource.js"></script>
-    <script src="./lib/angular-touch/angular-touch.js"></script>
-    <script src="./lib/angular-sanitize/angular-sanitize.js"></script>
-    <script src="./lib/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="./app/app.js"></script>
-    <script src="src/main.js"></script>
-    <script src="src/about.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.5/ui-bootstrap-tpls.min.js">
-    <link rel="stylesheet" type="text/css" href="./styles/index.css">
-  </footer>
+<body>
+  <div class="container">
+    <div ui-view></div>
+    <a ui-sref="resultsColumn"></a>
+  </div>
+</body>
+<footer>
+  <script src="/lib/angular/angular.js"></script>
+  <script src="/lib/angular-animate/angular-animate.js"></script>
+  <script src="/lib/angular-cookies/angular-cookies.js"></script>
+  <script src="/lib/angular-resource/angular-resource.js"></script>
+  <script src="/lib/angular-touch/angular-touch.js"></script>
+  <script src="/lib/angular-sanitize/angular-sanitize.js"></script>
+  <script src="/lib/angular-ui-bootstrap/angular-ui-bootstrap.js"></script>
+  <script src="/lib/angular-bootstrap/angular-bootstrap.js"></script>
+  <script src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="/app/app.js"></script>
+  <script src="/src/main.js"></script>
+  <script src="/src/about.js"></script>
+  <link rel="stylesheet" type="text/css" href="./styles/index.css">
+</footer>
+
 </html>
