--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>SentimentaList</title>
-
 </head>
 
 <body>
   <div class="container">
-    <div ui-view></div>
-    <a ui-sref="resultsColumn"></a>
+    <div ui-view>
+     <a ui-sref="searchBar"></a>
+    </div>
+    <a ui-sref="searchBar.results">results</a>
   </div>
 </body>
 <footer>
@@ -20,12 +21,13 @@
   <script src="/lib/angular-resource/angular-resource.js"></script>
   <script src="/lib/angular-touch/angular-touch.js"></script>
   <script src="/lib/angular-sanitize/angular-sanitize.js"></script>
-  <script src="/lib/angular-ui-bootstrap/angular-ui-bootstrap.js"></script>
-  <script src="/lib/angular-bootstrap/angular-bootstrap.js"></script>
+  <script src="/styles/ui-bootstrap-tpls-1.2.5.js"></script>
   <script src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/app/app.js"></script>
-  <script src="/src/main.js"></script>
-  <script src="/src/about.js"></script>
+  <script src="/src/resultsController.js"></script>
+  <script src="/src/searchBar.js"></script>
+  <script src="/services/services.js"></script>
+  <link rel="stylesheet" type="text/css" href="./styles/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="./styles/index.css">
 </footer>
 
