--- a/client/index.html
+++ b/client/index.html
@@ -6,29 +6,36 @@
   <title>SentimentaList</title>
 </head>
 
-<body>
-  <div class="container">
-    <div ui-view>
-     <a ui-sref="searchBar"></a>
+<body class="container">
+  <div class="row">
+    <div class="span12">
+      <div class="well" ui-view></div>
     </div>
-    <a ui-sref="searchBar.results">results</a>
   </div>
+  <div class="navbar">
+    <div class="navbar-inner">
+      <ul class="nav">
+        <li><a ui sref="searchBar">Hide List</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <footer>
+    <script src="/lib/angular/angular.js"></script>
+    <script src="/lib/angular-animate/angular-animate.js"></script>
+    <script src="/lib/angular-cookies/angular-cookies.js"></script>
+    <script src="/lib/angular-resource/angular-resource.js"></script>
+    <script src="/lib/angular-touch/angular-touch.js"></script>
+    <script src="/lib/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/styles/ui-bootstrap-tpls-1.2.5.js"></script>
+    <script src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/app/app.js"></script>
+    <script src="/src/resultsController.js"></script>
+    <script src="/src/searchBar.js"></script>
+    <script src="/services/services.js"></script>
+    <link rel="stylesheet" type="text/css" href="./styles/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./styles/index.css">
+  </footer>
 </body>
-<footer>
-  <script src="/lib/angular/angular.js"></script>
-  <script src="/lib/angular-animate/angular-animate.js"></script>
-  <script src="/lib/angular-cookies/angular-cookies.js"></script>
-  <script src="/lib/angular-resource/angular-resource.js"></script>
-  <script src="/lib/angular-touch/angular-touch.js"></script>
-  <script src="/lib/angular-sanitize/angular-sanitize.js"></script>
-  <script src="/styles/ui-bootstrap-tpls-1.2.5.js"></script>
-  <script src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="/app/app.js"></script>
-  <script src="/src/resultsController.js"></script>
-  <script src="/services/services.js"></script>
-  <script src="/src/searchBar.js"></script>
-  <link rel="stylesheet" type="text/css" href="./styles/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="./styles/index.css">
-</footer>
 
 </html>
