progressing along nicely

--- a/client/index.html
+++ b/client/index.html
@@ -2,16 +2,12 @@
 <html ng-app="sL">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <title>SentimentaList</title>
 </head>
 
 <body class="container">
-  <div class="row">
-    <div class="span12">
-      <div class="well" ui-view></div>
-    </div>
-  </div>
+  <div ui-view></div>
   <footer>
     <script src="/lib/angular/angular.js"></script>
     <script src="/lib/angular-animate/angular-animate.js"></script>
