--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,12 @@
 <body class="container">
   <div ui-view></div>
   <footer>
+    <link rel="stylesheet" type="text/css" href="/styles/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles/index.css">
+    <link rel="stylesheet" type="text/css" href="/styles/bootstrap-social.css">
+  <link rel="icon" type="image/png" href="/styles/g3490.png" />
+  <link rel="icon"  type="image/icon" href="S.svg.ico"/>
     <script src="/lib/angular/angular.js"></script>
     <script src="/lib/angular-animate/angular-animate.js"></script>
     <script src="/lib/angular-cookies/angular-cookies.js"></script>
@@ -18,11 +24,12 @@
     <script src="/styles/ui-bootstrap-tpls-1.2.5.js"></script>
     <script src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/app/app.js"></script>
+
     <script src="/src/resultsController.js"></script>
     <script src="/src/searchBar.js"></script>
+    <script src="/src/modal.js"></script>
+    <script src="/src/auth.js"></script>
     <script src="/services/services.js"></script>
-    <link rel="stylesheet" type="text/css" href="./styles/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="./styles/index.css">
   </footer>
 </body>
 
