Added IMG scrap functionality & now adding size test functionality as the images that are coming back are sub optimal.

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
     <script src="/src/modal.js"></script>
     <script src="/src/auth.js"></script>
     <script src="/services/services.js"></script>
+    <script src="/services/searchswap.js"></script>
   </footer>
 </body>
 
