Implemented basic authentication

--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
                 Sign In</a>
             </li>
             <li>
-              <a href="/#/logout">
+              <a href="/logout">
                 <span class="fa fa-fw fa-sign-out" aria-hidden="true"></span>
                 Logout</a>
             </li>
