Created searchHistory controller and view

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
               <a href="/#/about">About Us</a>
             </li>
             <li>
-              <a href="/#/favorites">Favorites</a>
+              <a href="/#/history">Search History</a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -87,6 +87,7 @@
         <script src="/app/app.js"></script>
         <script src="/src/resultsController.js"></script>
         <script src="/src/aboutController.js"></script>
+        <script src="/src/searchHistory.js"></script>
         <script src="/src/searchBar.js"></script>
         <script src="/src/modal.js"></script>
         <script src="/src/auth.js"></script>
