sort menu dropdowns

--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,7 @@
         <script src="/src/resultsController.js"></script>
         <script src="/src/aboutController.js"></script>
         <script src="/src/searchHistory.js"></script>
+        <script src="/src/dropDownController.js"></script>
         <script src="/src/searchBar.js"></script>
         <script src="/src/modal.js"></script>
         <script src="/src/auth.js"></script>
