--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
             <a href="/#/about">About Us</a>
           </li>
           <li>
-            <a href="/#/history">Search History</a>
+            <a href="/#/history">Sentiment Scores</a>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
