--- a/client/index.html
+++ b/client/index.html
@@ -64,6 +64,7 @@
         <script src="/src/auth.js"></script>
         <script src="/services/services.js"></script>
         <script src="/services/searchswap.js"></script>
+        <script src="/services/apis.js"></script>
       </footer>
     </body>
   </html>
