--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
               <a href="/#/about">About Us</a>
             </li>
             <li>
-              <a href="/#/history">Sentiment Scores</a>
+              <a href="/#/history">My Favorites</a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -57,6 +57,7 @@
         <script src="/styles/ui-bootstrap-tpls-1.2.5.js"></script>
         <script src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="/app/app.js"></script>
+        <script src='/src/favsController.js'></script>
         <script src="/src/resultsController.js"></script>
         <script src="/src/aboutController.js"></script>
         <script src="/src/searchHistory.js"></script>
