fb signin front end

--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
               </a>
             </li>
           </ul>
+          <p ng-controller="AuthController" ng-show="loggedIn" class="navbar-text navbar-right">Welcome, {{user.username}}</p>
         </div>
       </nav>
       <!-- /navigation bar -->
