--- a/client/index.html
+++ b/client/index.html
@@ -39,7 +39,7 @@
               </a>
             </li>
           </ul>
-          <p ng-controller="AuthController" ng-show="loggedIn" class="navbar-text navbar-right">Welcome, {{user.username}}</p>
+          <p ng-controller="AuthController" class="navbar-text navbar-right" ng-show="loggedIn">Welcome, {{loggedInUser}}</p>
         </div>
       </nav>
       <!-- /navigation bar -->
